# AirCursor

./: .gitignore  README.md  config.yaml.example  download_models.py  pyproject.toml
docs/: EXTERNAL_PROJECTS.md  README.md
src/aircursor/: __init__.py  app.py
src/aircursor/core/: gesture_fusion.py  hagrid_dynamic_adapter.py  hand_tracker.py  mouse_engine.py
src/aircursor/models/: dynamic_lstm.py  hagrid_fullframe.py  static_mlp.py
src/aircursor/scripts/: collect_dynamic.py  collect_static.py  convert_static_images.py  hagrid_import.py  label_tool.py  mouse_control.py  preview_dynamic_gestures.py  preview_static_gestures.py  static_mouse_control.py  train_static.py
src/aircursor/utils/: landmark_preprocess.py  screen_utils.py  trajectory_recorder.py
